First chunk of logic for Cluster controller

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -70,3 +70,6 @@ vars:
 #    kind: Service
 #    version: v1
 #    name: webhook-service
+
+commonLabels:
+  cluster.x-k8s.io/provider: infrastructure-harvester
