--- a/config/default/manager_config_patch.yaml
+++ b/config/default/manager_config_patch.yaml
@@ -8,3 +8,4 @@ spec:
     spec:
       containers:
       - name: manager
+        image: ghcr.io/rancher-sandbox/cluster-api-provider-harvester:dev
