--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_harvesterclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_harvesterclusters.yaml
@@ -66,7 +66,7 @@ spec:
                 type: object
               identitySecret:
                 description: IdentitySecret is the name of the Secret containing HarvesterKubeConfig
-                  file
+                  file.
                 properties:
                   name:
                     description: Name is the name of the required Identity Secret
@@ -79,11 +79,55 @@ spec:
                 - name
                 - namespace
                 type: object
+              loadBalancerConfig:
+                description: LoadBalancerConfig describes how the load balancer should
+                  be created in Harvester.
+                properties:
+                  ipPool:
+                    description: IpPool defines a new IpPool that will be added to
+                      Harvester. This field is mutually exclusive with "IpPoolRef"
+                    properties:
+                      gateway:
+                        description: Gateway is the IP Address that should be used
+                          by the Gateway on the Subnet. It should be a valid address
+                          inside the subnet e.g. 172.17.1.1
+                        type: string
+                      subnet:
+                        description: Subnet is a string describing the subnet that
+                          should be used by the IP Pool, it should have the CIDR Format
+                          of an IPv4 Address e.g. 172.17.1.0/24
+                        type: string
+                      vmNetwork:
+                        description: VMNetwork is the name of an existing VM Network
+                          in Harvester where the IPPool should exist.
+                        type: string
+                    required:
+                    - gateway
+                    - subnet
+                    - vmNetwork
+                    type: object
+                  ipPoolRef:
+                    description: IpPoolRef is a reference to an existing IpPool object
+                      in Harvester's cluster in the same namespace. This field is
+                      mutually exclusive with "ipPool"
+                    type: string
+                  ipamType:
+                    description: IPAMType is the configuration of IP addressing for
+                      the control plane load balancer. This can take two values, either
+                      "dhcp" or "ippool"
+                    enum:
+                    - dhcp
+                    - pool
+                    type: string
+                required:
+                - ipamType
+                type: object
               server:
-                description: Server is the url to connect to Harvester
+                description: Server is the url to connect to Harvester.
                 type: string
             required:
             - identitySecret
+            - loadBalancerConfig
             type: object
           status:
             description: HarvesterClusterStatus defines the observed state of HarvesterCluster
@@ -103,6 +147,8 @@ spec:
             required:
             - ready
             type: object
+        required:
+        - spec
         type: object
     served: true
     storage: true
