Parts of HarvesterMachine implemented, HarvesterCluster implemented mostly
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -34,6 +34,15 @@ rules:
 - apiGroups:
   - infrastructure.cluster.x-k8s.io
   resources:
+  - clusters
+  - machines
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - infrastructure.cluster.x-k8s.io
+  resources:
   - harvesterclusters
   verbs:
   - create
