added some improvements
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/samples/kubeadm/example.yaml
+++ b/samples/kubeadm/example.yaml
@@ -29,6 +29,8 @@ metadata:
   name: ${CLUSTER_NAME}-hv
   namespace: ${CLUSTER_NAMESPACE}
 spec:
+  loadBalancerConfig:
+    ipamType: dhcp
   server: 
   identitySecret: 
     namespace: ${CLUSTER_NAMESPACE}
