--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/infrastructure.cluster.x-k8s.io_harvestermachines.yaml
 - bases/infrastructure.cluster.x-k8s.io_harvesterclusters.yaml
+- bases/infrastructure.cluster.x-k8s.io_harvestermachinetemplates.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -11,12 +12,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_harvestermachines.yaml
 #- patches/webhook_in_harvesterclusters.yaml
+#- patches/webhook_in_harvestermachinetemplates.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_harvestermachines.yaml
 #- patches/cainjection_in_harvesterclusters.yaml
+#- patches/cainjection_in_harvestermachinetemplates.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
