--- a/samples/kubeadm/example.yaml
+++ b/samples/kubeadm/example.yaml
@@ -12,7 +12,10 @@ spec:
   clusterNetwork:
     pods:
       cidrBlocks:
-      - 192.168.0.0/16
+      - 10.42.0.0/16
+    services:
+      cidrBlocks:
+      - 10.43.0.0/16
     serviceDomain: cluster.local
   controlPlaneRef:
     apiVersion: controlplane.cluster.x-k8s.io/v1beta1
@@ -50,6 +53,7 @@ metadata:
   namespace: ${CLUSTER_NAMESPACE}
   name: ${CLUSTER_NAME}-control-plane
 spec:
+  replicas: ${CONTROLPLANE_REPLICAS}
   kubeadmConfigSpec: 
     initConfiguration: {}
   machineTemplate:
