--- a/samples/kubeadm/test.env
+++ b/samples/kubeadm/test.env
@@ -2,3 +2,4 @@ export CLUSTER_NAME=test
 export CLUSTER_NAMESPACE=example
 export SSH_KEYPAIR=macos-key
 export VM_IMAGE_NAME=default/ubuntu-2204-kube-v1.26.7.qcow2
+export CONTROLPLANE_REPLICAS=3
