--- a/samples/rke2/example.yaml
+++ b/samples/rke2/example.yaml
@@ -36,7 +36,7 @@ spec:
       port: 9345
       protocol: TCP
       backendPort: 9345
-  server: https://192.168.1.161:6443 
+  server: ${HARVESTER_ENDPOINT}
   identitySecret: 
     namespace: ${CLUSTER_NAMESPACE}
     name: hv-identity-secret
