Fixed some small issues for release Action
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,5 +63,4 @@ jobs:
         name: ${{ env.TAG }}
         files: |
           out/metadata.yaml
-          out/bootstrap-components.yaml
-          out/control-plane-components.yaml
+          out/components.yaml
