Added placeholder for the cloud-config secret
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/templates/cluster-template-rke2.yaml
+++ b/templates/cluster-template-rke2.yaml
@@ -564,6 +564,7 @@ data:
       - kind: ServiceAccount
         name: harvester-cloud-controller-manager
         namespace: kube-system
+${CLOUD_CONFIG_SECRET}
 ---
 apiVersion: v1
 kind: ConfigMap
