Adding placeholder for Rancher Turtles automatic import
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/templates/cluster-template-rke2.yaml
+++ b/templates/cluster-template-rke2.yaml
@@ -9,6 +9,7 @@ metadata:
   namespace: ${NAMESPACE}
   name: ${CLUSTER_NAME} 
   labels:
+${RANCHER_TURTLES_LABEL}
     ccm: external
     csi: external
     cni: external
