--- a/templates/cluster-template-kubeadm.yaml
+++ b/templates/cluster-template-kubeadm.yaml
@@ -171,7 +171,7 @@ spec:
   resources:
   - kind: ConfigMap
     name: cloud-controller-manager-addon
-  strategy: ApplyOnce
+  strategy: Reconcile
 ---
 apiVersion: addons.cluster.x-k8s.io/v1beta1
 kind: ClusterResourceSet
@@ -185,7 +185,7 @@ spec:
   resources:
   - kind: ConfigMap
     name: harvester-csi-driver-addon
-  strategy: ApplyOnce
+  strategy: Reconcile
 ---
 apiVersion: v1
 kind: ConfigMap
