--- a/templates/cluster-template-rke2.yaml
+++ b/templates/cluster-template-rke2.yaml
@@ -217,7 +217,7 @@ data:
               env:
                 - name: ADDRESS
                   value: /csi/csi.sock
-              image: longhornio/csi-node-driver-registrar:v1.2.0-lh1
+              image: longhornio/csi-node-driver-registrar:v2.9.2
               lifecycle:
                 preStop:
                   exec:
@@ -364,7 +364,6 @@ data:
             - args:
                 - --v=5
                 - --csi-address=$(ADDRESS)
-                - --csiTimeout=2m5s
                 - --leader-election
                 - --leader-election-namespace=$(POD_NAMESPACE)
               env:
@@ -375,7 +374,7 @@ data:
                     fieldRef:
                       apiVersion: v1
                       fieldPath: metadata.namespace
-              image: longhornio/csi-resizer:v0.5.1-lh1
+              image: longhornio/csi-resizer:v1.10.1
               name: csi-resizer
               volumeMounts:
                 - mountPath: /csi/
@@ -384,8 +383,7 @@ data:
                 - --v=5
                 - --csi-address=$(ADDRESS)
                 - --timeout=2m5s
-                - --enable-leader-election
-                - --leader-election-type=leases
+                - --leader-election
                 - --leader-election-namespace=$(POD_NAMESPACE)
               env:
                 - name: ADDRESS
@@ -395,7 +393,7 @@ data:
                     fieldRef:
                       apiVersion: v1
                       fieldPath: metadata.namespace
-              image: longhornio/csi-provisioner:v1.6.0-lh1
+              image: longhornio/csi-provisioner:v3.6.4
               name: csi-provisioner
               volumeMounts:
                 - mountPath: /csi/
@@ -414,7 +412,7 @@ data:
                     fieldRef:
                       apiVersion: v1
                       fieldPath: metadata.namespace
-              image: longhornio/csi-attacher:v2.2.1-lh1
+              image: longhornio/csi-attacher:v4.5.1
               name: csi-attacher
               volumeMounts:
                 - mountPath: /csi/
@@ -485,7 +483,7 @@ data:
             - --cloud-config=/etc/kubernetes/cloud-config
             command:
             - harvester-cloud-provider
-            image: rancher/harvester-cloud-provider:v0.2.0
+            image: rancher/harvester-cloud-provider:v0.2.1
             imagePullPolicy: Always
             name: harvester-cloud-provider
             resources: {}
