--- a/templates/cluster-template-rke2.yaml
+++ b/templates/cluster-template-rke2.yaml
@@ -123,7 +123,7 @@ spec:
       volumes:
       - volumeType: image 
         imageName: ${VM_IMAGE_NAME}
-        volumeSize: 50Gi
+        volumeSize: ${VM_DISK_SIZE}
         bootOrder: 0
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
@@ -143,7 +143,7 @@ spec:
       volumes:
       - volumeType: image 
         imageName: ${VM_IMAGE_NAME}
-        volumeSize: 50Gi
+        volumeSize: ${VM_DISK_SIZE}
         bootOrder: 0
 ---
 apiVersion: addons.cluster.x-k8s.io/v1beta1
