Fixed a couple of issues during machine creation and LBPlaceholder management
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachines.yaml
@@ -18,7 +18,7 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: HarvesterMachine is the Schema for the harvestermachines API
+        description: HarvesterMachine is the Schema for the harvestermachines API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -33,7 +33,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: HarvesterMachineSpec defines the desired state of HarvesterMachine
+            description: HarvesterMachineSpec defines the desired state of HarvesterMachine.
             properties:
               cpu:
                 description: CPU is the number of CPU to assign to the VM.
@@ -44,11 +44,12 @@ spec:
                 type: string
               memory:
                 description: Memory is the memory size to assign to the VM (should
-                  be similar to pod.spec.containers.resources.limits)
+                  be similar to pod.spec.containers.resources.limits).
                 type: string
               networks:
-                description: Networks is a list of Networks to attach to the VM. Networks
-                  are referenced by their names.
+                description: Networks is a list of Networks to attach to the VM. Each
+                  item in the list can have the format "namespace/name" or just "name"
+                  if the object is in the same namespace as the HarvesterMachine.
                 items:
                   type: string
                 type: array
@@ -250,13 +251,15 @@ spec:
                     x-kubernetes-map-type: atomic
                 type: object
               providerID:
-                description: ProviderID will be the ID of the machine used by the
-                  controller. This will be "<harvester vm namespace>-<harvester vm
-                  name>"
+                description: ProviderID will be the ID of the VM in the provider (Harvester).
+                  This is set by the Cloud provider on the Workload cluster node and
+                  replicated by CAPI.
                 type: string
               sshKeyPair:
                 description: SSHKeyPair is the name of the SSH key pair to use for
-                  SSH access to the VM (this keyPair should be created in Harvester)
+                  SSH access to the VM (this keyPair should be created in Harvester).
+                  The reference can be in the format "namespace/name" or just "name"
+                  if the object is in the same namespace as the HarvesterMachine.
                 type: string
               sshUser:
                 description: SSHUser is the user that should be used to connect to
@@ -268,12 +271,15 @@ spec:
                   properties:
                     bootOrder:
                       description: BootOrder is an integer that determines the order
-                        of priority of volumes for booting the VM If absent, the sequence
-                        with which volumes appear in the manifest will be used.
+                        of priority of volumes for booting the VM. If absent, the
+                        sequence with which volumes appear in the manifest will be
+                        used.
                       type: integer
                     imageName:
                       description: ImageName is the name of the image to use if the
-                        volumeType is "image"
+                        volumeType is "image" ImageName can be in the format "namespace/name"
+                        or just "name" if the object is in the same namespace as the
+                        HarvesterMachine.
                       type: string
                     storageClass:
                       description: StorageClass is the name of the storage class to
@@ -598,7 +604,7 @@ spec:
             - volumes
             type: object
           status:
-            description: HarvesterMachineStatus defines the observed state of HarvesterMachine
+            description: HarvesterMachineStatus defines the observed state of HarvesterMachine.
             properties:
               addresses:
                 items:
@@ -668,8 +674,6 @@ spec:
               ready:
                 description: Ready is true when the provider resource is ready.
                 type: boolean
-            required:
-            - ready
             type: object
         type: object
     served: true
