--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_harvesterclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_harvesterclusters.yaml
@@ -32,7 +32,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: HarvesterCluster is the Schema for the harvesterclusters API
+        description: HarvesterCluster is the Schema for the harvesterclusters API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -47,7 +47,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: HarvesterClusterSpec defines the desired state of HarvesterCluster
+            description: HarvesterClusterSpec defines the desired state of HarvesterCluster.
             properties:
               controlPlaneEndpoint:
                 description: ControlPlaneEndpoint represents the endpoint used to
@@ -69,11 +69,11 @@ spec:
                   file.
                 properties:
                   name:
-                    description: Name is the name of the required Identity Secret
+                    description: Name is the name of the required Identity Secret.
                     type: string
                   namespace:
                     description: Namespace is the namespace in which the required
-                      Identity Secret should be found
+                      Identity Secret should be found.
                     type: string
                 required:
                 - name
@@ -89,21 +89,23 @@ spec:
                     type: string
                   ipPool:
                     description: IpPool defines a new IpPool that will be added to
-                      Harvester. This field is mutually exclusive with "IpPoolRef"
+                      Harvester. This field is mutually exclusive with "IpPoolRef".
                     properties:
                       gateway:
                         description: Gateway is the IP Address that should be used
                           by the Gateway on the Subnet. It should be a valid address
-                          inside the subnet e.g. 172.17.1.1
+                          inside the subnet. e.g. 172.17.1.1.
                         type: string
                       subnet:
                         description: Subnet is a string describing the subnet that
                           should be used by the IP Pool, it should have the CIDR Format
-                          of an IPv4 Address e.g. 172.17.1.0/24
+                          of an IPv4 Address. e.g. 172.17.1.0/24.
                         type: string
                       vmNetwork:
                         description: VMNetwork is the name of an existing VM Network
-                          in Harvester where the IPPool should exist.
+                          in Harvester where the IPPool should exist. The reference
+                          can have the format "namespace/name" or just "name" if the
+                          object is in the same namespace as the HarvesterCluster.
                         type: string
                     required:
                     - gateway
@@ -111,14 +113,14 @@ spec:
                     - vmNetwork
                     type: object
                   ipPoolRef:
-                    description: IpPoolRef is a reference to an existing IpPool object
-                      in Harvester's cluster in the same namespace. This field is
-                      mutually exclusive with "ipPool"
+                    description: 'IpPoolRef is a reference to an existing IpPool object
+                      in Harvester''s cluster. This field is mutually exclusive with
+                      "ipPool". TODO: To be implemented'
                     type: string
                   ipamType:
                     description: IPAMType is the configuration of IP addressing for
                       the control plane load balancer. This can take two values, either
-                      "dhcp" or "ippool"
+                      "dhcp" or "ippool".
                     enum:
                     - dhcp
                     - pool
@@ -128,25 +130,25 @@ spec:
                       on the load balancer.
                     items:
                       description: Listener is a description of a new Listener to
-                        be created on the Load Balancer
+                        be created on the Load Balancer.
                       properties:
                         backendPort:
                           description: TargetPort is the port that the listener should
-                            forward traffic to
+                            forward traffic to.
                           format: int32
                           type: integer
                         name:
-                          description: Name is the name of the listener
+                          description: Name is the name of the listener.
                           type: string
                         port:
                           description: Port is the port that the listener should listen
-                            on
+                            on.
                           format: int32
                           type: integer
                         protocol:
                           default: TCP
                           description: Protocol is the protocol that the listener
-                            should use, either TCP or UDP
+                            should use, either TCP or UDP.
                           enum:
                           - TCP
                           - UDP
@@ -166,7 +168,7 @@ spec:
                 type: string
               targetNamespace:
                 description: TargetNamespace is the namespace on the Harvester cluster
-                  where VMs, Load Balancers, etc. should be created
+                  where VMs, Load Balancers, etc. should be created.
                 type: string
             required:
             - identitySecret
@@ -174,7 +176,7 @@ spec:
             - targetNamespace
             type: object
           status:
-            description: HarvesterClusterStatus defines the observed state of HarvesterCluster
+            description: HarvesterClusterStatus defines the observed state of HarvesterCluster.
             properties:
               conditions:
                 description: Conditions defines current service state of the Harvester
@@ -224,15 +226,15 @@ spec:
                 type: array
               failureMessage:
                 description: FailureMessage is a full error message dump of the above
-                  failureReason
+                  failureReason.
                 type: string
               failureReason:
                 description: FailureReason is the short name for the reason why a
-                  failure might be happening that makes the cluster not ready
+                  failure might be happening that makes the cluster not ready.
                 type: string
               ready:
                 description: Reddy describes if the Harvester Cluster can be considered
-                  ready for machine creation
+                  ready for machine creation.
                 type: boolean
             required:
             - ready
