--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_infraclustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_infraclustertemplates.yaml
@@ -44,7 +44,7 @@ spec:
               template:
                 properties:
                   metadata:
-                    description: 'Standard object''s metadata. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata'
+                    description: 'Standard object''s metadata. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata.'
                     properties:
                       annotations:
                         additionalProperties:
@@ -66,7 +66,7 @@ spec:
                     type: object
                   spec:
                     description: HarvesterClusterSpec defines the desired state of
-                      HarvesterCluster
+                      HarvesterCluster.
                     properties:
                       controlPlaneEndpoint:
                         description: ControlPlaneEndpoint represents the endpoint
@@ -89,11 +89,11 @@ spec:
                         properties:
                           name:
                             description: Name is the name of the required Identity
-                              Secret
+                              Secret.
                             type: string
                           namespace:
                             description: Namespace is the namespace in which the required
-                              Identity Secret should be found
+                              Identity Secret should be found.
                             type: string
                         required:
                         - name
@@ -110,22 +110,24 @@ spec:
                           ipPool:
                             description: IpPool defines a new IpPool that will be
                               added to Harvester. This field is mutually exclusive
-                              with "IpPoolRef"
+                              with "IpPoolRef".
                             properties:
                               gateway:
                                 description: Gateway is the IP Address that should
                                   be used by the Gateway on the Subnet. It should
-                                  be a valid address inside the subnet e.g. 172.17.1.1
+                                  be a valid address inside the subnet. e.g. 172.17.1.1.
                                 type: string
                               subnet:
                                 description: Subnet is a string describing the subnet
                                   that should be used by the IP Pool, it should have
-                                  the CIDR Format of an IPv4 Address e.g. 172.17.1.0/24
+                                  the CIDR Format of an IPv4 Address. e.g. 172.17.1.0/24.
                                 type: string
                               vmNetwork:
                                 description: VMNetwork is the name of an existing
                                   VM Network in Harvester where the IPPool should
-                                  exist.
+                                  exist. The reference can have the format "namespace/name"
+                                  or just "name" if the object is in the same namespace
+                                  as the HarvesterCluster.
                                 type: string
                             required:
                             - gateway
@@ -133,14 +135,14 @@ spec:
                             - vmNetwork
                             type: object
                           ipPoolRef:
-                            description: IpPoolRef is a reference to an existing IpPool
-                              object in Harvester's cluster in the same namespace.
-                              This field is mutually exclusive with "ipPool"
+                            description: 'IpPoolRef is a reference to an existing
+                              IpPool object in Harvester''s cluster. This field is
+                              mutually exclusive with "ipPool". TODO: To be implemented'
                             type: string
                           ipamType:
                             description: IPAMType is the configuration of IP addressing
                               for the control plane load balancer. This can take two
-                              values, either "dhcp" or "ippool"
+                              values, either "dhcp" or "ippool".
                             enum:
                             - dhcp
                             - pool
@@ -150,25 +152,25 @@ spec:
                               be created on the load balancer.
                             items:
                               description: Listener is a description of a new Listener
-                                to be created on the Load Balancer
+                                to be created on the Load Balancer.
                               properties:
                                 backendPort:
                                   description: TargetPort is the port that the listener
-                                    should forward traffic to
+                                    should forward traffic to.
                                   format: int32
                                   type: integer
                                 name:
-                                  description: Name is the name of the listener
+                                  description: Name is the name of the listener.
                                   type: string
                                 port:
                                   description: Port is the port that the listener
-                                    should listen on
+                                    should listen on.
                                   format: int32
                                   type: integer
                                 protocol:
                                   default: TCP
                                   description: Protocol is the protocol that the listener
-                                    should use, either TCP or UDP
+                                    should use, either TCP or UDP.
                                   enum:
                                   - TCP
                                   - UDP
@@ -188,7 +190,7 @@ spec:
                         type: string
                       targetNamespace:
                         description: TargetNamespace is the namespace on the Harvester
-                          cluster where VMs, Load Balancers, etc. should be created
+                          cluster where VMs, Load Balancers, etc. should be created.
                         type: string
                     required:
                     - identitySecret
