--- a/templates/cluster-template-rke2-dhcp.yaml
+++ b/templates/cluster-template-rke2-dhcp.yaml
@@ -565,7 +565,15 @@ data:
       - kind: ServiceAccount
         name: harvester-cloud-controller-manager
         namespace: kube-system
-${CLOUD_CONFIG_SECRET}
+    ---
+    apiVersion: v1
+    kind: Secret
+    metadata:
+      name: cloud-config
+      namespace: kube-system
+    type: Opaque
+    data:
+      cloud-config: ${CLOUD_CONFIG_KUBECONFIG_B64}
 ---
 apiVersion: v1
 kind: ConfigMap
