--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,9 +6,8 @@ on:
     - "v*.*.*"
 
 env:
-  TAG: ${{ github.ref_name }}
   REGISTRY: ghcr.io
-  ORG: ${{ github.repository_owner }}
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build:
@@ -21,20 +20,38 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+
     - name: setupGo
       uses: actions/setup-go@v5
       with:
         go-version: '=1.22.3'
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Docker login
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build docker image
-      run: make docker-build-all TAG=${{ env.TAG }} ORG=${{ env.ORG }}
-    - name: Push docker image
-      run: make docker-push-all TAG=${{ env.TAG }} PROD_REGISTRY=${{ env.REGISTRY }} ORG=${{ env.ORG }}
+
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
   release:
     runs-on: ubuntu-latest
     permissions:
