Update README to include missing required workload cluster settings
Signed-off-by: Ivan Sim <ivan.sim@suse.com>

--- a/templates/cluster-template-rke2-dhcp.yaml
+++ b/templates/cluster-template-rke2-dhcp.yaml
@@ -29,7 +29,7 @@ metadata:
   name: ${CLUSTER_NAME}-hv
   namespace: ${NAMESPACE}
 spec:
-  targetNamespace: default
+  targetNamespace: ${TARGET_HARVESTER_NAMESPACE}
   loadBalancerConfig:
     ipamType: dhcp
     listeners:
