Added support for custom ip Pools, linter fixes
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -48,7 +48,7 @@ linters-settings:
     statements: 60
   lll:
     line-length: 150
-  gomnd:
+  mnd:
     ignored-numbers:
       - "5"
       - "4"
