--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_harvesterclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_harvesterclusters.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.2
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.16.5
   name: harvesterclusters.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -35,14 +34,19 @@ spec:
         description: HarvesterCluster is the Schema for the harvesterclusters API.
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -88,24 +92,32 @@ spec:
                       that should be created.
                     type: string
                   ipPool:
-                    description: IpPool defines a new IpPool that will be added to
-                      Harvester. This field is mutually exclusive with "IpPoolRef".
+                    description: |-
+                      IpPool defines a new IpPool that will be added to Harvester.
+                      This field is mutually exclusive with "IpPoolRef".
                     properties:
                       gateway:
-                        description: Gateway is the IP Address that should be used
-                          by the Gateway on the Subnet. It should be a valid address
-                          inside the subnet. e.g. 172.17.1.1.
+                        description: |-
+                          Gateway is the IP Address that should be used by the Gateway on the Subnet. It should be a valid address inside the subnet.
+                          e.g. 172.17.1.1.
+                        type: string
+                      rangeEnd:
+                        description: RangeEnd is the last IP Address that should be
+                          used by the IP Pool.
+                        type: string
+                      rangeStart:
+                        description: RangeStart is the first IP Address that should
+                          be used by the IP Pool.
                         type: string
                       subnet:
-                        description: Subnet is a string describing the subnet that
-                          should be used by the IP Pool, it should have the CIDR Format
-                          of an IPv4 Address. e.g. 172.17.1.0/24.
+                        description: |-
+                          Subnet is a string describing the subnet that should be used by the IP Pool, it should have the CIDR Format of an IPv4 Address.
+                          e.g. 172.17.1.0/24.
                         type: string
                       vmNetwork:
-                        description: VMNetwork is the name of an existing VM Network
-                          in Harvester where the IPPool should exist. The reference
-                          can have the format "namespace/name" or just "name" if the
-                          object is in the same namespace as the HarvesterCluster.
+                        description: |-
+                          VMNetwork is the name of an existing VM Network in Harvester where the IPPool should exist.
+                          The reference can have the format "namespace/name" or just "name" if the object is in the same namespace as the HarvesterCluster.
                         type: string
                     required:
                     - gateway
@@ -113,14 +125,14 @@ spec:
                     - vmNetwork
                     type: object
                   ipPoolRef:
-                    description: 'IpPoolRef is a reference to an existing IpPool object
-                      in Harvester''s cluster. This field is mutually exclusive with
-                      "ipPool". TODO: To be implemented'
+                    description: |-
+                      IpPoolRef is a reference to an existing IpPool object in Harvester's cluster.
+                      This field is mutually exclusive with "ipPool".
                     type: string
                   ipamType:
-                    description: IPAMType is the configuration of IP addressing for
-                      the control plane load balancer. This can take two values, either
-                      "dhcp" or "ippool".
+                    description: |-
+                      IPAMType is the configuration of IP addressing for the control plane load balancer.
+                      This can take two values, either "dhcp" or "ippool".
                     enum:
                     - dhcp
                     - pool
@@ -146,7 +158,6 @@ spec:
                           format: int32
                           type: integer
                         protocol:
-                          default: TCP
                           description: Protocol is the protocol that the listener
                             should use, either TCP or UDP.
                           enum:
@@ -186,37 +197,37 @@ spec:
                     operational state.
                   properties:
                     lastTransitionTime:
-                      description: Last time the condition transitioned from one status
-                        to another. This should be when the underlying condition changed.
-                        If that is not known, then using the time when the API field
-                        changed is acceptable.
+                      description: |-
+                        Last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed. If that is not known, then using the time when
+                        the API field changed is acceptable.
                       format: date-time
                       type: string
                     message:
-                      description: A human readable message indicating details about
-                        the transition. This field may be empty.
+                      description: |-
+                        A human readable message indicating details about the transition.
+                        This field may be empty.
                       type: string
                     reason:
-                      description: The reason for the condition's last transition
-                        in CamelCase. The specific API may choose whether or not this
-                        field is considered a guaranteed API. This field may not be
-                        empty.
+                      description: |-
+                        The reason for the condition's last transition in CamelCase.
+                        The specific API may choose whether or not this field is considered a guaranteed API.
+                        This field may not be empty.
                       type: string
                     severity:
-                      description: Severity provides an explicit classification of
-                        Reason code, so the users or machines can immediately understand
-                        the current situation and act accordingly. The Severity field
-                        MUST be set only when Status=False.
+                      description: |-
+                        Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                        understand the current situation and act accordingly.
+                        The Severity field MUST be set only when Status=False.
                       type: string
                     status:
                       description: Status of the condition, one of True, False, Unknown.
                       type: string
                     type:
-                      description: Type of condition in CamelCase or in foo.example.com/CamelCase.
-                        Many .condition.type values are consistent across resources
-                        like Available, but because arbitrary conditions can be useful
-                        (see .node.status.conditions), the ability to deconflict is
-                        important.
+                      description: |-
+                        Type of condition in CamelCase or in foo.example.com/CamelCase.
+                        Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
+                        can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
                   - lastTransitionTime
@@ -233,11 +244,9 @@ spec:
                   failure might be happening that makes the cluster not ready.
                 type: string
               ready:
-                description: Reddy describes if the Harvester Cluster can be considered
+                description: Ready describes if the Harvester Cluster can be considered
                   ready for machine creation.
                 type: boolean
-            required:
-            - ready
             type: object
         required:
         - spec
