implementation of cloud provider config update
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachines.yaml
@@ -263,6 +263,8 @@ spec:
               volumes:
                 description: Volumes is a list of Volumes to attach to the VM
                 items:
+                  description: Volume defines a volume that should be attached to
+                    the VM.
                   properties:
                     bootOrder:
                       description: |-
