--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_harvestermachinetemplates.yaml
@@ -274,6 +274,8 @@ spec:
                         description: Volumes is a list of Volumes to attach to the
                           VM
                         items:
+                          description: Volume defines a volume that should be attached
+                            to the VM.
                           properties:
                             bootOrder:
                               description: |-
