--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_infraclustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_infraclustertemplates.yaml
@@ -217,8 +217,8 @@ spec:
                             description: CloudConfigCredentialsSecretName is the name
                               of the secret containing the cloud provider credentials.
                             type: string
-                          manifestConfigMapKey:
-                            description: ManifestConfigMapKey is the key in the ConfigMap
+                          manifestsConfigMapKey:
+                            description: ManifestsConfigMapKey is the key in the ConfigMap
                               that contains the cloud provider deployment manifests.
                             type: string
                           manifestsConfigMapName:
@@ -232,7 +232,7 @@ spec:
                         required:
                         - cloudConfigCredentialsSecretKey
                         - cloudConfigCredentialsSecretName
-                        - manifestConfigMapKey
+                        - manifestsConfigMapKey
                         - manifestsConfigMapName
                         - manifestsConfigMapNamespace
                         type: object
